feat: Java 17 + Perception Modifiers + Scenario Configs (#11)
* feat: added scenario_config.json for scenario
* feat(tse): added inclusion of occlusion
* feat(tse): bump Java version to 17
* feat(fcd): made occlusion modifier more detailed